// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSwitch assigns automatically generated ID to label 1`] = `
<div
  class="ouiSwitch"
>
  <button
    aria-checked="false"
    aria-labelledby="generated-id"
    class="ouiSwitch__button"
    id="generated-id"
    role="switch"
    type="button"
  >
    <span
      class="ouiSwitch__body"
    >
      <span
        class="ouiSwitch__thumb"
      />
      <span
        class="ouiSwitch__track"
      >
        <span
          class="ouiSwitch__icon"
          data-ouiicon-type="cross"
        />
        <span
          class="ouiSwitch__icon ouiSwitch__icon--checked"
          data-ouiicon-type="check"
        />
      </span>
    </span>
  </button>
  <span
    class="ouiSwitch__label"
    id="generated-id"
  >
    Label
  </span>
</div>
`;

exports[`OuiSwitch is rendered 1`] = `
<div
  class="ouiSwitch testClass1 testClass2"
>
  <button
    aria-checked="false"
    aria-label="aria-label"
    aria-labelledby="generated-id"
    class="ouiSwitch__button"
    data-test-subj="test subject string"
    id="test"
    role="switch"
    type="button"
  >
    <span
      class="ouiSwitch__body"
    >
      <span
        class="ouiSwitch__thumb"
      />
      <span
        class="ouiSwitch__track"
      >
        <span
          class="ouiSwitch__icon"
          data-ouiicon-type="cross"
        />
        <span
          class="ouiSwitch__icon ouiSwitch__icon--checked"
          data-ouiicon-type="check"
        />
      </span>
    </span>
  </button>
  <span
    class="ouiSwitch__label"
    id="generated-id"
  >
    Label
  </span>
</div>
`;

exports[`OuiSwitch labelProps is rendered 1`] = `
<div
  class="ouiSwitch"
>
  <button
    aria-checked="false"
    aria-labelledby="generated-id"
    class="ouiSwitch__button"
    id="generated-id"
    role="switch"
    type="button"
  >
    <span
      class="ouiSwitch__body"
    >
      <span
        class="ouiSwitch__thumb"
      />
      <span
        class="ouiSwitch__track"
      >
        <span
          class="ouiSwitch__icon"
          data-ouiicon-type="cross"
        />
        <span
          class="ouiSwitch__icon ouiSwitch__icon--checked"
          data-ouiicon-type="check"
        />
      </span>
    </span>
  </button>
  <span
    aria-label="aria-label"
    class="ouiSwitch__label testClass1 testClass2"
    data-test-subj="test subject string"
    id="generated-id"
  >
    Label
  </span>
</div>
`;
